# pytest-course

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
day1/: first_test.py
example/apps/client/: admin.py  urls.py
example/apps/client/templates/: update_client.html
example/config/: urls.py
example/config/settings/: base.py  production.py
example/notebooks/: login_tests.ipynb  scratch.ipynb  timelines.ipynb
example/requirements/: develop.txt  production.in  production.txt
locnus/: admin.py  commands.py  forms.py  manage.py  models.py  requirements.txt  setup.cfg  urls.py  views.py
locnus/apps/client/: forms.py  models.py  urls.py  views.py
locnus/apps/client/migrations/: 0001_initial.py
locnus/apps/client/templates/: _base.html  client_list.html  create.html  index.html  login_detail.html  login_list.html
locnus/apps/core/: admin.py  models.py
locnus/apps/theme/templates/: base.html
locnus/config/: asgi.py  settings.py  urls.py  wsgi.py
locnus/locnus/: asgi.py  settings.py  urls.py  wsgi.py
locnus/migrations/: 0001_initial.py
locnus/notebooks/: mastodon_tests.ipynb  timelines.ipynb
locnus/requirements/: develop.txt  production.in  production.txt
locnus/templates/: _base.html  create_login.html  index.html  login_detail.html  login_list.html  server_list.html  timeline_partial.html
tests/: class_test.py  conftest.py  first_test.py  fixture_test.py  forms_test.py  mock_test.py  models_test.py  settings.py  tdd_test.py  test_file_fixture.py  views_test.py
tests/api_tests/: api_test.py  conftest.py
tests/day1/: first.py
(+1 files in other folders)
