[project]
name = "pytest-course"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-pytestcourse@wersdoerfer.de"},
]
requires-python = ">=3.11"

[project.urls]
Source = "https://github.com/ephes/pytest-course"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "locnus.locnus.settings"
minversion = "6.0"
testpaths = ["day1"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::wagtail.utils.deprecation.RemovedInWagtail50Warning",
    "ignore::DeprecationWarning",
]
addopts = [
    "-ra",
    "--randomly-seed=1234",
]

[tool.coverage.run]
branch = true
source = ["locnus"]
omit = [
    "locnus/*/migrations/*",
    "locnus/locnus/settings.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
